# file-storage

./: Cargo.toml  Rocket.toml
src/: lib.rs  main.rs  storage.rs  utils.rs  views.rs
static/js/: index.js  utils.js
static/lib/bs5/: bootstrap.min.js
templates/: index.html.tera
